--- a/OGP/Server/packages.config
+++ b/OGP/Server/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net461" />
+  <package id="RSG.Promise" version="1.2.2.0" targetFramework="net461" />
+  <package id="Rssdp" version="3.5.7" targetFramework="net461" />
+  <package id="uHttpSharp" version="0.1.6.22" targetFramework="net461" />
 </packages>
