--- a/OGP/Server/Server.csproj
+++ b/OGP/Server/Server.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{83C731A4-F319-4D0F-B983-72A65145CB48}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>OGP.Server</RootNamespace>
-    <AssemblyName>OGP Server</AssemblyName>
+    <AssemblyName>Server</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -50,11 +50,11 @@
     <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="RSG.Promise, Version=1.2.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RSG.Promise.1.2.2.0\lib\net35\RSG.Promise.dll</HintPath>
+    <Reference Include="RSG.Promise, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RSG.Promise.1.3.0\lib\net35\RSG.Promise.dll</HintPath>
     </Reference>
     <Reference Include="Rssdp, Version=3.5.7.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Rssdp.3.5.7\lib\net45\Rssdp.dll</HintPath>
@@ -67,6 +67,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Thrift, Version=0.9.1.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Thrift.0.9.1.3\lib\net35\Thrift.dll</HintPath>
+    </Reference>
     <Reference Include="uhttpsharp, Version=0.1.5653.28566, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\uHttpSharp.0.1.6.22\lib\net40\uhttpsharp.dll</HintPath>
     </Reference>
@@ -76,17 +79,25 @@
     <Compile Include="ClientManager.cs" />
     <Compile Include="ClusterManager.cs" />
     <Compile Include="ClusterMember.cs" />
+    <Compile Include="ClusterService.cs" />
+    <Compile Include="ClusterServiceHandler.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameManager.cs" />
+    <Compile Include="GameSession.cs" />
     <Compile Include="Games\Pacman.cs" />
     <Compile Include="Games\Random.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="PlayerEvent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerDefinition.cs" />
     <Compile Include="XmlHttpServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Server.thrift" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
