added pacman code to proj

--- a/OGP/Client/Client.csproj
+++ b/OGP/Client/Client.csproj
@@ -60,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MainFrame.resx">
+      <DependentUpon>MainFrame.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -83,6 +86,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\red_guy.gif" />
+    <None Include="Resources\Right.gif" />
+    <None Include="Resources\Up.gif" />
+    <None Include="Resources\yellow_guy.gif" />
+    <None Include="Resources\cccc.gif" />
+    <None Include="Resources\coin.gif" />
+    <None Include="Resources\coint2.gif" />
+    <None Include="Resources\Image1.bmp" />
+    <None Include="Resources\down.gif" />
+    <None Include="Resources\pink_guy.bmp" />
+    <None Include="Resources\Left.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pink_guy.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
