fixed PM args names and code cleanup

--- a/OGP/PuppetMaster/PuppetMaster.csproj
+++ b/OGP/PuppetMaster/PuppetMaster.csproj
@@ -54,5 +54,14 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Client\Client.csproj">
+      <Project>{22b2b4cc-4bfc-42be-968d-0cf06a93ca4a}</Project>
+      <Name>Client</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
