--- a/OGP/Server/Server.csproj
+++ b/OGP/Server/Server.csproj
@@ -69,20 +69,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArgsOptions.cs" />
-    <Compile Include="ClientManager.cs" />
-    <Compile Include="ClusterManager.cs" />
-    <Compile Include="ClusterMember.cs" />
+    <Compile Include="ChatManager.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="GameManager.cs" />
     <Compile Include="GameNotFoundException.cs" />
     <Compile Include="GameService.cs" />
-    <Compile Include="GameSession.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="PlayerEvent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlHttpServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -99,6 +93,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PuppetSlave\PuppetSlave.csproj">
+      <Project>{f38ed2ff-63a3-4fcf-bed0-67eacb8b6593}</Project>
+      <Name>PuppetSlave</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
