--- a/OGP/Client/Client.csproj
+++ b/OGP/Client/Client.csproj
@@ -123,9 +123,9 @@
     <None Include="Resources\pink_guy.gif" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PuppetSlave\PuppetSlave.csproj">
+    <ProjectReference Include="..\PuppetSlave\PCS.csproj">
       <Project>{f38ed2ff-63a3-4fcf-bed0-67eacb8b6593}</Project>
-      <Name>PuppetSlave</Name>
+      <Name>PCS</Name>
     </ProjectReference>
     <ProjectReference Include="..\Server\Server.csproj">
       <Project>{83c731a4-f319-4d0f-b983-72a65145cb48}</Project>
