--- a/OGP/PuppetSlave/PCS.csproj
+++ b/OGP/PuppetSlave/PCS.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F38ED2FF-63A3-4FCF-BED0-67EACB8B6593}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>OGP.PuppetSlave</RootNamespace>
-    <AssemblyName>PuppetSlave</AssemblyName>
+    <RootNamespace>OGP.PCS</RootNamespace>
+    <AssemblyName>PCS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PcsManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
