--- a/OGP/Server/packages.config
+++ b/OGP/Server/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net461" />
   <package id="RSG.Promise" version="1.3.0" targetFramework="net461" />
-  <package id="Rssdp" version="3.5.7" targetFramework="net461" />
+  <package id="Sprache" version="2.1.0" targetFramework="net461" />
 </packages>
