--- a/OGP/Client/Client.csproj
+++ b/OGP/Client/Client.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuppressedWriter.cs" />
+    <Compile Include="WaitingBox.cs" />
     <EmbeddedResource Include="MainFrame.resx">
       <DependentUpon>MainFrame.cs</DependentUpon>
     </EmbeddedResource>
