another working commit

--- a/OGP/Client/Client.csproj
+++ b/OGP/Client/Client.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ChatClient.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="CommandParser.cs" />
+    <Compile Include="ControlExtension.cs" />
     <Compile Include="MainFrame.cs">
       <SubType>Form</SubType>
     </Compile>
