--- a/OGP/Server/Server.csproj
+++ b/OGP/Server/Server.csproj
@@ -74,16 +74,11 @@
     <Compile Include="Command.cs" />
     <Compile Include="CommandParser.cs" />
     <Compile Include="CommunicationsManager.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="GameNotFoundException.cs" />
-    <Compile Include="GameObjects.cs" />
-    <Compile Include="GameService.cs" />
     <Compile Include="GameState.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Handlers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerObjects.cs" />
+    <Compile Include="SharedObjects.cs" />
     <Compile Include="SuppressedWriter.cs" />
   </ItemGroup>
   <ItemGroup>
