--- a/OGP/Middleware/Middleware.csproj
+++ b/OGP/Middleware/Middleware.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ObjectProperties.cs" />
+    <Compile Include="SharedObjects.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
